# simpleTFTPS

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  MANIFEST.in  Makefile  README.md  log.txt  pyproject.toml  setup.py
include/: simpletftps.cpp  simpletftps.hpp
simpleTFTPS/: Cargo.toml
simpleTFTPS/src/: encode.rs  error.rs  lib.rs
simpleTFTPS/tests/: tests.rs
tests/c/: main.cpp
tests/python/: ipxe.efi  pyproject.toml  serve_file.py  tests.py  tests_dir.py
